add Login functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,12 @@ dependencies:
   get: ^3.25.4
   google_sign_in: ^4.5.9
   firebase_auth: "^0.20.0+1"
+  flutter_facebook_login: ^3.0.0
+  cloud_firestore:
+  flutter_svg: ^0.19.2+1
+
+
+
 
 dev_dependencies:
   flutter_test:
