--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,7 @@ dependencies:
   firebase_auth: "^0.20.0+1"
   flutter_facebook_login: ^3.0.0
   cloud_firestore:
-  flutter_svg: ^0.19.2+1
-
+  flutter_svg:
 
 
 
