add cart UI & functionality 1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,17 +8,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: null
   cupertino_icons: ^1.0.0
-  google_fonts: ^1.1.2
-  firebase_core: "0.7.0"
-  get: ^3.25.4
-  google_sign_in: ^4.5.9
-  firebase_auth: "^0.20.0+1"
+  firebase_auth: ^0.20.0+1
+  firebase_core: 0.7.0
   flutter_facebook_login: ^3.0.0
-  cloud_firestore:
-  flutter_svg:
-
-
+  flutter_svg: null
+  get: ^3.25.4
+  google_fonts: ^1.1.2
+  google_sign_in: ^4.5.9
+  sqflite: 
 
 dev_dependencies:
   flutter_test:
@@ -29,13 +28,10 @@ flutter:
 
   assets:
     - assets/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
