--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_fonts: ^1.1.2
   google_sign_in: ^4.5.9
   sqflite: 
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
