--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   google_sign_in: ^4.5.9
   sqflite: 
   shared_preferences: ^0.5.12+4
+  status_change: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
